@@ -48,14 +48,17 @@ public final class CharacterReader {
             return;
 
         try {
-            readerPos += bufPos;
             reader.skip(bufPos);
             reader.mark(maxBufferLen);
-            bufLength = reader.read(charBuf);
+            final int read = reader.read(charBuf);
             reader.reset();
-            bufPos = 0;
-            bufMark = 0;
-            bufSplitPoint = bufLength > readAheadLimit ? readAheadLimit : bufLength;
+            if (read != -1) {
+                bufLength = read;
+                readerPos += bufPos;
+                bufPos = 0;
+                bufMark = 0;
+                bufSplitPoint = bufLength > readAheadLimit ? readAheadLimit : bufLength;
+            }
         } catch (IOException e) {
             throw new UncheckedIOException(e);
         }
@@ -74,6 +77,11 @@ public final class CharacterReader {
      * @return true if nothing left to read.
      */
     public boolean isEmpty() {
+        bufferUp();
+        return bufPos >= bufLength;
+    }
+
+    private boolean isEmptyNoBufferUp() {
         return bufPos >= bufLength;
     }
 
@@ -83,12 +91,12 @@ public final class CharacterReader {
      */
     public char current() {
         bufferUp();
-        return isEmpty() ? EOF : charBuf[bufPos];
+        return isEmptyNoBufferUp() ? EOF : charBuf[bufPos];
     }
 
     char consume() {
         bufferUp();
-        char val = isEmpty() ? EOF : charBuf[bufPos];
+        char val = isEmptyNoBufferUp() ? EOF : charBuf[bufPos];
         bufPos++;
         return val;
     }
@@ -281,7 +289,7 @@ public final class CharacterReader {
             else
                 break;
         }
-        while (!isEmpty()) {
+        while (!isEmptyNoBufferUp()) {
             char c = charBuf[bufPos];
             if (c >= '0' && c <= '9')
                 bufPos++;
