@@ -1,6 +1,9 @@
 package org.jsoup.parser;
 
+import org.junit.Ignore;
 import org.junit.Test;
+
+import java.io.StringReader;
 
 import static org.junit.Assert.*;
 
@@ -266,6 +269,19 @@ public class CharacterReaderTest {
         assertEquals("", after);
 
         assertTrue(r.isEmpty());
+    }
+
+    @Ignore
+    @Test
+    public void notEmptyAtBufferSplitPoint() {
+        CharacterReader r = new CharacterReader(new StringReader("How about now"), 3);
+        assertEquals("How", r.consumeTo(' '));
+        assertFalse("Should not be empty", r.isEmpty());
+
+        assertEquals(' ', r.consume());
+        assertFalse(r.isEmpty());
+
+        // todo - current consume to won't expand buffer. impl buffer extension and test
     }
 
 
